--- a/style.css
+++ b/style.css
@@ -9,9 +9,11 @@ body {
 * {
   box-sizing: border-box;
 }
+
 img {
   width: 100%;
 }
+
 .page {
   margin: 0;
 
@@ -24,143 +26,138 @@ img {
   );
 }
 
+/* menu containerner */
+
 .container-menu {
+  height: 140px;
   width: 100%;
-  height: 12vh;
-  background: rgb(40, 113, 223);
   position: fixed;
   top: 0;
   left: 0;
-  border-bottom: black solid 2px;
+  background: rgb(8, 91, 245);
+  display: flex;
+  flex-direction: row;
 }
 
 .logo {
-  margin: auto 0 auto 0;
+  height: 30vh;
+  max-height: 150px;
+  max-width: 220px;
 }
 
 .nav-container {
-  position: relative;
-
-  top: 100%;
-  height: auto;
+  position: absolute;
+  top: 90%;
   width: 100%;
-  left: -100%;
-  transition: 0.34s ease;
-  z-index: 40;
-}
-
-.nav-container_active {
-  left: 0;
-}
-
-.active-nav {
-  background: none;
-  height: 6vh;
-  width: 6vh;
-  font-size: 4rem;
-
-  position: absolute;
-  right: 10px;
-  top: 25%;
-}
-
-.logo {
-  width: 50%;
-  position: absolute;
-  top: -40%;
-  left: 0;
+  left: 100%;
 }
 
 .nav-container ul {
-  visibility: inherit;
-  margin: 0;
+  list-style: none;
   padding: 0;
 }
 
 .nav-container ul li {
-  visibility: inherit;
-  list-style: none;
-  display: flex;
-  height: 10vh;
-  font-size: 2.6rem;
-  background: brown;
-
-  border-bottom: 2px solid black;
-
-  align-items: center;
+  height: 50px;
+  width: 100%;
+  background: red;
+  border-bottom: black solid 1px;
+  text-align: center;
 }
 
 .nav-container ul li a {
-  visibility: inherit;
-  position: relative;
   text-decoration: none;
+  font-size: 2.5rem;
   color: black;
-
-  font-stretch: semi-expanded;
-  margin: auto auto auto auto;
 }
 
-.header picture {
-  width: 100%;
-  height: 100%;
+.active-nav {
+  background: none;
+  margin: auto 20px auto auto;
+  height: 80px;
+  width: 80px;
 }
+
+/* header pagina */
 
 .header {
-  height: 30vh;
-  margin: 12vh auto 12vh auto;
-  box-shadow: black 2px 0 10px 10px;
+  margin: 140px auto auto auto;
+  width: 100%;
+  max-width: 650px;
+  max-height: 300px;
+}
+.header picture img {
+  box-shadow: black 0 0 10px 3px;
 }
 
-.seccion {
+/* main and seccions */
+
+.principal {
+  display: flex;
+  flex-direction: column;
   width: 90%;
-  font-size: 2rem;
-  margin: auto auto 30px auto;
-  border-radius: 2px;
-  border: 2px solid black;
-  box-shadow: black 0px 10px 10px 0px;
-  padding: 10px;
-  background: rgba(255, 255, 255, 0.384);
+  margin: 20vw auto auto auto;
 }
 
-.seccion h3 {
-  color: rgb(0, 0, 0);
-  text-shadow: rgb(18, 255, 38) 2px 2px 2px;
-}
-.seccion picture img {
-  border: black 2px solid;
+.principal section {
+  padding: 15px;
+  background: rgba(255, 255, 255, 0.336);
+  border: solid 1px black;
   box-shadow: black 0 0 10px 1px;
+  margin-bottom: 30px;
+  font-size: 1.6rem;
 }
 
-.aprendiendo {
-  background-image: url("./imges/learning.png");
-  height: auto;
-  width: auto;
-  position: absolute;
-  z-index: 10;
+.seccion div h3 {
+  text-shadow: chartreuse 2px 2px 10px;
 }
 
-.redes {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
 .redes div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 10px;
 }
 
-.redes div img {
-  width: 50%;
+/* medais queries */
+
+@media (min-width: 650px) and (max-width: 900px) {
+  .header {
+    max-width: 800px;
+  }
+  .principal {
+    margin-top: 30vw;
+  }
 }
 
-footer {
-  position: relative;
-  bottom: 0;
-  height: 100px;
-  background: rgb(42, 42, 224);
-}
+@media (min-width: 900px) {
+  .header {
+    max-width: 1000px;
+  }
+  .principal {
+    margin-top: 40vw;
+  }
+  .seccion {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  .habilidades h3 {
+    font-size: 3rem;
+  }
+  .trabajos {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .texto-trabajos {
+    height: 90%;
+    width: 50%;
+    padding-left: 5%;
 
-.quien-hizo {
-  text-align: center;
+    font-size: 3rem;
+  }
+  .texto-trabajos h3 {
+    text-align: center;
+  }
+  .trabajos picture {
+    width: 50%;
+  }
 }
